# forward_plus_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/sponza/: sponzaPBR.mtl
shaders/: billboard.frag  billboard.vert  default.frag  default.vert  depthprepass.frag  depthprepass.vert  lightculling.comp  octahedron.frag  octahedron.vert  shading.frag  shading.vert  ssao.frag  ssao_blur.frag  ssao_blur.vert  text.frag  text.vert  ui.frag  ui.vert
src/: anim.hpp  camera.cpp  camera.hpp  culling.cpp  culling.hpp  env.cpp  env.hpp  forward.hpp  game.cpp  game.hpp  io.cpp  io.hpp  main.cpp  model.cpp  model.hpp  pixels.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader_cache.cpp  shader_cache.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  texture.hpp  ui_renderer.cpp  ui_renderer.hpp  uniforms.cpp  uniforms.hpp  vao.cpp  vao.hpp
